# todolister

./: .gitignore  Justfile  Pipfile  README.md  dev-requirements.txt  pyproject.toml  requirements-dev.txt  style.css  test_todolister.py  todolister.py
examples/: example.opt  project-tasks.txt
src/todolister/: todolister.py
tests/: test_todolister.py
