[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "todolister"
dynamic = ["version"]
description = 'Scans folders for text files containing to-do items identified by markers.'
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = [ "text", "todo", "to-do", "todo-lister"]
authors = [ { name = "Bill Melvin", email = "bill@sbillmelvin.com" } ]
dependencies = []

[dependency-groups]
dev = [
    "html5lib>=1.1",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[project.scripts]
todolister = "todolister:todolister.main"

# [tool.setuptools.packages.find]
# include = ["todolister*"]

[tool.setuptools.dynamic]
version = {attr = "todolister.todolister.__version__"}

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
# extend-select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",    # assert
    "PERF401", # manual-list-comprehension
    "PLR2004", # magic-value-comparison
]

